--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -75,7 +75,7 @@ About | Karunya Eye Hospital
         <div class="about-block-item mb-5 mb-lg-0">
           <img src="static/images/gallery/37 Q.jpg" alt="Compassionate and Personalized Hospital"
             class="img-fluid w-100" />
-          <h4 class="mt-3">Compassionate and Personalized Hospital</h4>
+          <h4 class="mt-3">Compassionate and personalized Care.</h4>
           <p>We treat every patient like family, ensuring comfort, education, and informed decision-making for better
             eye health.</p>
         </div>
@@ -91,7 +91,7 @@ About | Karunya Eye Hospital
       <div class="col-lg-3 col-md-6">
         <div class="about-block-item mb-5 mb-lg-0">
           <img src="static/images/gallery/42 Q.jpg" alt="Affordable Quality Eye hospital" class="img-fluid w-100" />
-          <h4 class="mt-3">Affordable Quality Eye Hospital</h4>
+          <h4 class="mt-3">Affordable Quality Eye Care</h4>
           <p>Accredited NABH centers providing high-quality treatment at pocket-friendly prices for all sections of
             society.</p>
         </div>
@@ -99,7 +99,7 @@ About | Karunya Eye Hospital
       <div class="col-lg-3 col-md-6">
         <div class="about-block-item">
           <h4 class="mt-3">Experienced and Skilled Experts</h4>
-          <p>Our dedicated team of specialists ensures superior Hospital with continuous training and expertise.</p>
+          <p>Our dedicated team of specialists ensures superior eye care with continuous training and expertise.</p>
           <img src="static/images/gallery/48 Q.jpg" alt="Experienced and Skilled Experts" class="img-fluid w-100" />
         </div>
       </div>
@@ -110,10 +110,7 @@ About | Karunya Eye Hospital
 <section>
   <div class="text-center mt-5">
     <h2 class="title-color">QUALITY POLICY</h2>
-    <p class="mt-4 mb-5 justify-text">Karunya Eye Hospital is dedicated to delivering comprehensive, world-class eye
-      Hospital in a safe and patient-centered environment. With a strong commitment to quality, professional ethics, and
-      advanced medical expertise, we ensure the highest standards of diagnosis, treatment, and vision Hospital while
-      continuously enhancing patient satisfaction through a robust Quality Management System.</p>
+    <p class="mt-4 mb-5 justify-text">Karunya Eye Hospital is dedicated to delivering comprehensive, world-class eye care in a safe and patient-friendly. With a strong commitment to quality, professional ethics, and advanced medical expertise, we ensure the highest standards of diagnosis, treatment, and vision care while continuously enhancing patient satisfaction through a superior Quality Management System.</p>
   </div>
 </section>
 
@@ -124,8 +121,7 @@ About | Karunya Eye Hospital
       <div class="col-lg-4">
         <div class="about-content pr-4 mt-4 mt-lg-0">
           <h2 class="title-color">OUR MISSION</h2>
-          <p class="mt-4 mb-5">To provide quality eye Hospital treatment to the people, as per our vision, by
-            establishing as many centres as possible in both inside and outside India.</p>
+          <p class="mt-4 mb-5">We are dedicated to provide superior patient care with personalized attention to clinical excellence, patient safety and an unparalleled passion and commitment to assure the very best healthcare for those we serve.</p>
           <a href="" class="btn btn-main-2 btn-round-full btn-icon">Learn More<i
               class="fa-solid fa-angles-right text-white"></i></a>
         </div>
@@ -177,7 +173,7 @@ About | Karunya Eye Hospital
 
 <section>
   <div class="text-center mt-5 approach-section">
-    <h2 class="title-color">OUR APPROACH TO EYE HOSPITAL</h2>
+    <h2 class="title-color">OUR APPROACH TO EYE CARE</h2>
     <div class="row mt-4">
       <!-- Card 1: Hospital with Compassion -->
       <div class="col-md-4">
@@ -186,8 +182,7 @@ About | Karunya Eye Hospital
             class="card-img-top rounded approach-img" />
           <div class="card-body">
             <h4 class="card-title">Hospital with Compassion</h4>
-            <p class="card-text">We provide Hospital with a positive attitude, listen to patients, apologize for
-              mistakes, and take corrective action.</p>
+            <p class="card-text">We provide compassionate eye care with a positive attitude to ensure best treatment to all patients visiting our Centres.</p>
           </div>
         </div>
       </div>
@@ -199,8 +194,7 @@ About | Karunya Eye Hospital
             class="card-img-top rounded approach-img" />
           <div class="card-body">
             <h4 class="card-title">Integrity and Excellence</h4>
-            <p class="card-text">We work as a team to provide comprehensive eye Hospital. We act ethically and take
-              responsibility for everything we do.</p>
+            <p class="card-text">We work as a Team to provide comprehensive eye care, act ethically, take responsibility for the treatment and care.</p>
           </div>
         </div>
       </div>
