--- a/templates/cataract.html
+++ b/templates/cataract.html
@@ -23,7 +23,7 @@
       <div class="row align-items-center">
         <!-- Left Side Image -->
         <div class="col-lg-6 mb-4">
-          <img src="path/to/cataract-image.jpg" alt="Cataract Surgery" class="img-fluid rounded" />
+          <img src="https://www.apexeyeandivf.com/wp-content/uploads/2023/02/cataract.png" alt="Cataract Surgery" class="img-fluid rounded" />
         </div>
 
         <!-- Right Side Content -->
