--- a/templates/intra.html
+++ b/templates/intra.html
@@ -37,7 +37,7 @@
 
         <!-- Image Right -->
         <div class="col-lg-6 p-0">
-          <img src="path/to/intravitreal-services.jpg" alt="Intravitreal Services" class="img-fluid w-100 h-100 object-fit-cover" />
+          <img src="https://tunbridgewellseyecentre.co.uk/wp-content/uploads/2024/09/TWEC_General-05259.jpg" alt="Intravitreal Services" class="img-fluid w-100 h-100 object-fit-cover" />
         </div>
       </div>
     </div>
