--- a/templates/laser.html
+++ b/templates/laser.html
@@ -41,7 +41,7 @@
 
         <!-- Image Right -->
         <div class="col-lg-6 p-0">
-          <img src="path/to/retinal-laser-therapy.jpg" alt="Retinal Laser Therapy" class="img-fluid w-100 h-100 object-fit-cover" />
+          <img src="https://www.texasretina.com/wp-content/uploads/2019/06/Screen-Shot-2019-06-25-at-1.11.32-PM-1200x792.png" alt="Retinal Laser Therapy" class="img-fluid w-100 h-100 object-fit-cover" />
         </div>
       </div>
     </div>
