--- a/templates/opt.html
+++ b/templates/opt.html
@@ -30,8 +30,8 @@
         </div>
 
         <!-- Image Right -->
-        <div class="col-lg-6 p-0">
-          <img src="path/to/general-ophthalmology.jpg" alt="General Ophthalmology" class="img-fluid w-100 h-100 object-fit-cover" />
+        <div class="col-lg-6 p-0 d-flex align-items-center justify-content-center">
+          <img src="https://www.westernlasereye.com/wp-content/uploads/shutterstock_1565916823-1.jpg" alt="Customer Experience" class="img-fluid" style="max-height: 100%; height: auto;" />
         </div>
       </div>
     </div>
