--- a/templates/retina.html
+++ b/templates/retina.html
@@ -33,8 +33,8 @@
         </div>
 
         <!-- Image Right -->
-        <div class="col-lg-6 p-0">
-          <img src="path/to/medical-retina.jpg" alt="Medical Retinal Service" class="img-fluid w-100 h-100 object-fit-cover" />
+        <div class="col-lg-6 p-0 d-flex align-items-center justify-content-center">
+          <img src="https://cdn.dotplus.in/Cloud/SSEH/SSEHImage/Image19481d2904834338b47e0ae28c0be57c3750a5d4-09e8-4433-8c95-4482fcad8ef7.jpg" alt="Customer Experience" class="img-fluid" style="max-height: 100%; height: auto;" />
         </div>
       </div>
     </div>
