--- a/templates/services.html
+++ b/templates/services.html
@@ -101,7 +101,7 @@
           <a href="customer" class="service-card w-100">
             <img src="static/images/customer.jpeg" alt="Customer Experience" class="img-fluid rounded-top service-image" style="height: 150px;" />
             <div class="card-body">
-              <h5 class="card-title">Customer Experience</h5>
+              <h5 class="card-title">Patients Experience</h5>
             </div>
           </a>
         </div>
