--- a/templates/store.html
+++ b/templates/store.html
@@ -57,8 +57,8 @@
         </div>
 
         <!-- Image Right -->
-        <div class="col-lg-6 p-0">
-          <img src="path/to/optical-store.jpg" alt="Optical Store - Insight Galleria" class="img-fluid w-100 h-100 object-fit-cover" />
+        <div class="col-lg-6 p-0 d-flex align-items-center justify-content-center">
+          <img src="static/images/shop.jpeg" alt="Customer Experience" class="img-fluid" style="max-height: 100%; height: auto;" />
         </div>
       </div>
     </div>
