--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,222 +1,245 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Gallery | Karunya Eye Hospital
+Gallery | Karunya Eye Hospital
 {% endblock %}
 
 {% block content %}
-  <section class="page-title bg-1">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="block text-left">
-            <span class="text-white">Our Gallery</span>
-            <h1 class="text-capitalize mb-5 text-lg">Moments at Karunya Eye Hospital</h1>
-          </div>
+<section class="page-title bg-1">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="block text-left">
+          <span class="text-white">Our Gallery</span>
+          <h1 class="text-capitalize mb-5 text-lg">Moments at Karunya Eye Hospital</h1>
         </div>
       </div>
     </div>
-  </section>
-
-  <section class="section gallery">
-    <div class="container">
-      <div class="row justify-content-left">
-        <div class="col-lg-6 text-left">
-          <div class="section-title">
-            <h2>Our Eye Hospital Journey</h2>
-            <div class="divider mx-auto my-4"></div>
-            <p>Explore our state-of-the-art eye care facilities, advanced surgical procedures, and heartwarming patient journeys through our gallery.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="row shuffle-wrapper portfolio-gallery">
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/17.jpg" alt="surgery-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/16.jpg" alt="surgery-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/15.jpg" alt="facility-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/14.jpg" alt="facility-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/13.jpg" alt="patient-care-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/12.jpg" alt="patient-care-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/11.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/26 N.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/27 O.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/28 O.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/29 O.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/30 P.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-      </div>
-
-      <div class="row shuffle-wrapper portfolio-gallery">
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/31 P.jpg" alt="surgery-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/32 P.jpg" alt="surgery-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/33 Q.jpg" alt="facility-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/34 Q.jpg" alt="facility-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/35 Q.jpg" alt="patient-care-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/36 Q.jpg" alt="patient-care-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/37 Q.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/38 Q.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/39 Q.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/40 Q.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/41 Q.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
-          <div class="gallery-box">
-            <img src="static/images/gallery/42 Q.jpg" alt="event-image" class="img-fluid w-100" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <div id="imageOverlay" class="image-overlay">
-    <span class="image-overlay-close" onclick="closeOverlay()">&times;</span>
-    <img id="overlayImage" src="" alt="Full View" />
   </div>
+</section>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const images = document.querySelectorAll('.gallery-box img');
-      const overlay = document.getElementById('imageOverlay');
-      const overlayImage = document.getElementById('overlayImage');
-  
-      images.forEach(image => {
-        image.addEventListener('click', () => {
-          overlayImage.src = image.src;
-          overlay.classList.add('active');
-        });
+<section class="section gallery">
+  <div class="container">
+    <div class="row justify-content-left">
+      <div class="col-lg-6 text-left">
+        <div class="section-title">
+          <h2>Our Eye Hospital Journey</h2>
+          <div class="divider mx-auto my-4"></div>
+          <p>Explore our state-of-the-art eye care facilities, advanced surgical procedures, and heartwarming patient
+            journeys through our gallery.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row shuffle-wrapper portfolio-gallery">
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/17.jpg" alt="surgery-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/16.jpg" alt="surgery-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/15.jpg" alt="facility-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/14.jpg" alt="facility-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/13.jpg" alt="patient-care-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/12.jpg" alt="patient-care-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/11.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/26 N.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/27 O.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/28 O.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/29 O.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/30 P.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+    </div>
+
+    <div class="row shuffle-wrapper portfolio-gallery">
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/31 P.jpg" alt="surgery-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/32 P.jpg" alt="surgery-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/33 Q.jpg" alt="facility-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/34 Q.jpg" alt="facility-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/35 Q.jpg" alt="patient-care-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/36 Q.jpg" alt="patient-care-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/37 Q.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/38 Q.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/39 Q.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/40 Q.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/41 Q.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery/42 Q.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery1.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery2.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery3.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+        <div class="gallery-box">
+          <img src="static/images/gallery45.jpg" alt="event-image" class="img-fluid w-100" />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div id="imageOverlay" class="image-overlay">
+  <span class="image-overlay-close" onclick="closeOverlay()">&times;</span>
+  <img id="overlayImage" src="" alt="Full View" />
+</div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const images = document.querySelectorAll('.gallery-box img');
+    const overlay = document.getElementById('imageOverlay');
+    const overlayImage = document.getElementById('overlayImage');
+
+    images.forEach(image => {
+      image.addEventListener('click', () => {
+        overlayImage.src = image.src;
+        overlay.classList.add('active');
       });
     });
-  
-    function closeOverlay() {
-      document.getElementById('imageOverlay').classList.remove('active');
-    }
-  </script>
+  });
 
-  <style>
-    .image-overlay {
-      display: none;
-      position: fixed;
-      z-index: 1050;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      justify-content: center;
-      align-items: center;
-    }
-  
-    .image-overlay img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.7);
-    }
-  
-    .image-overlay.active {
-      display: flex;
-    }
-  
-    .image-overlay-close {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      font-size: 30px;
-      color: #fff;
-      cursor: pointer;
-      z-index: 1100;
-    }
-  </style>
-  
+  function closeOverlay() {
+    document.getElementById('imageOverlay').classList.remove('active');
+  }
+</script>
+
+<style>
+  .image-overlay {
+    display: none;
+    position: fixed;
+    z-index: 1050;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .image-overlay img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+  }
+
+  .image-overlay.active {
+    display: flex;
+  }
+
+  .image-overlay-close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 30px;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1100;
+  }
+</style>
+
 {% endblock %}
