--- a/templates/specialities.html
+++ b/templates/specialities.html
@@ -27,7 +27,7 @@
           <div class="section-title">
             <h2>Our Specialities</h2>
             <div class="divider mx-auto my-4"></div>
-            <p>Delivering comprehensive and advanced eye Hospital services with cutting-edge technology and expertise.</p>
+            <p>Delivering comprehensive and advanced eye care with cutting-edge technology and expertise.</p>
           </div>
         </div>
       </div>
